hopefully fixed iphone zoom issue and some spacing problems

--- a/app/assets/stylesheets/forms/_forms.scss
+++ b/app/assets/stylesheets/forms/_forms.scss
@@ -307,7 +307,7 @@ form {
 			}
 		}
 
-		@media (min-width: $constrained-width + 3rem) {
+		@include media(">#{$constrained-width + 3rem}" "!retina") {
 			position: absolute;
 
 			$button-offset: -20%;
